[package]
name = "rjc"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }  
clap = { version = "4.5.7", features = ["derive"] }
serde_json = "1.0"
redis = "0.25.3"
rayon = "1.10.0"
regex = "1.10.5"
csv = "1.3.0"

[profile.release]
# strip = true 
opt-level = 3
lto = true

[target.'cfg(target_os = "linux")']
rustflags = ["-C", "target-feature=+crt-static"]
 
[target.'cfg(target_os = "windows")']
rustflags = ["-C", "target-feature=+crt-static"]